--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <java-version>1.8</java-version>
         <slf4j-version>1.7.25</slf4j-version>
         <junit.version>4.12</junit.version>
+        <mockito.version>2.23.0</mockito.version>
         <httpclient-version>4.5.6</httpclient-version>
         <okhttp-version>3.11.0</okhttp-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -185,6 +186,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
