--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.mikehardy</groupId>
     <artifactId>google-analytics-java</artifactId>
-    <version>2.0.8-SNAPSHOT</version>
+    <version>2.0.8</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -209,7 +209,7 @@ More information about the protocol is available at https://developers.google.co
         <url>https://github.com:mikehardy/google-analytics-java</url>
         <connection>scm:git:git@github.com:mikehardy/google-analytics-java.git</connection>
         <developerConnection>scm:git:git@github.com:mikehardy/google-analytics-java.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>google-analytics-java-2.0.8</tag>
   </scm>
     <issueManagement>
         <system>github.com</system>
